Replaced Robert Harder's base 64 class with javax.xml.bind.DatatypeConverter
git-svn-id: https://svn.code.sf.net/p/writer2latex/code/trunk@188 f0f2a975-2e09-46c8-9428-3b39399b9f3c